fix responsivity on smallest screen

--- a/responsive-style.css
+++ b/responsive-style.css
@@ -236,6 +236,11 @@
 
 @media only screen and (max-width: 833px) {
         
+
+    .product__box {
+        min-width: 262px;
+    }
+
     .footer__text {
         max-width: 728px;
         margin-top: 2px 0px;
